@@ -12,8 +12,8 @@
 #' \tabular{lllll}{
 #' Package: \tab cbaf \cr
 #' Type: \tab Package \cr
-#' Version: \tab 1.7.1 \cr
-#' Date: \tab 2019-05-17 \cr
+#' Version: \tab 1.7.2 \cr
+#' Date: \tab 2019-05-18 \cr
 #' License: \tab Artistic-2.0 \cr
 #' }
 #'
@@ -280,6 +280,7 @@ processMultipleStudies <- function(
 
     )
 
+  message("")
 
 
   ##############################################################################
@@ -301,6 +302,7 @@ processMultipleStudies <- function(
 
     )
 
+  message("")
 
 
   ##############################################################################
@@ -319,7 +321,6 @@ processMultipleStudies <- function(
   dir.create(new.directory , showWarnings = FALSE)
 
   setwd(new.directory)
-
 
 
   ##############################################################################
@@ -361,6 +362,7 @@ processMultipleStudies <- function(
 
     )
 
+  message("")
 
 
   ##############################################################################
@@ -369,7 +371,6 @@ processMultipleStudies <- function(
   xlsxOutput(submissionName = submissionName,
 
              transposeResults = transposeResults)
-
 
 
   ##############################################################################
