@@ -13,8 +13,8 @@
 #' \tabular{lllll}{
 #' Package: \tab cbaf \cr
 #' Type: \tab Package \cr
-#' Version: \tab 1.7.1 \cr
-#' Date: \tab 2019-05-17 \cr
+#' Version: \tab 1.7.2 \cr
+#' Date: \tab 2019-05-18 \cr
 #' License: \tab Artistic-2.0 \cr
 #' }
 #'
@@ -272,6 +272,7 @@ processOneStudy <- function(
 
     )
 
+  message("")
 
 
   ##############################################################################
@@ -293,6 +294,7 @@ processOneStudy <- function(
 
     )
 
+  message("")
 
 
   ##############################################################################
@@ -311,7 +313,6 @@ processOneStudy <- function(
   dir.create(new.directory, showWarnings = FALSE)
 
   setwd(new.directory)
-
 
 
   ##############################################################################
@@ -353,6 +354,7 @@ processOneStudy <- function(
 
     )
 
+  message("")
 
 
   ##############################################################################
