@@ -55,8 +55,8 @@ included in cancer studies and, if not, looks for the alternative gene names.
 \tabular{lllll}{
 Package: \tab cbaf \cr
 Type: \tab Package \cr
-Version: \tab 1.7.1 \cr
-Date: \tab 2019-05-06 \cr
+Version: \tab 1.7.2 \cr
+Date: \tab 2019-05-18 \cr
 License: \tab Artistic-2.0 \cr
 }
 }
